Added draggable pins, requests table; Next: Ratings system?

--- a/CommutHer/Base.lproj/Main.storyboard
+++ b/CommutHer/Base.lproj/Main.storyboard
@@ -260,7 +260,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Sy-kp-ox1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1290" y="130.5"/>
+            <point key="canvasLocation" x="1290" y="90"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="VfU-zl-XVc">
@@ -482,18 +482,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1pi-yf-zY0">
-                                <rect key="frame" x="15" y="72" width="56" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="0SK-JS-Z0t"/>
-                                </constraints>
-                                <state key="normal" title="Markers"/>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <exclude reference="0SK-JS-Z0t"/>
-                                    </mask>
-                                </variation>
-                            </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="HVO-k9-6xR">
                                 <rect key="frame" x="0.0" y="111" width="600" height="441"/>
                                 <connections>
@@ -515,52 +503,67 @@
                                     <action selector="showSearchBar:" destination="FYP-3L-0UU" eventType="touchUpInside" id="W72-oP-Sxi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1pi-yf-zY0">
+                                <rect key="frame" x="15" y="72" width="56" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="0SK-JS-Z0t"/>
+                                </constraints>
+                                <state key="normal" title="Markers"/>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="0SK-JS-Z0t"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="placePin:" destination="FYP-3L-0UU" eventType="touchUpInside" id="gQF-yb-gy8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="HVO-k9-6xR" secondAttribute="bottom" constant="48" id="1gl-p2-csc"/>
-                            <constraint firstItem="1pi-yf-zY0" firstAttribute="top" secondItem="wWY-dZ-3dw" secondAttribute="bottom" constant="8" symbolic="YES" id="2na-7a-pM9"/>
-                            <constraint firstItem="HVO-k9-6xR" firstAttribute="top" secondItem="1pi-yf-zY0" secondAttribute="bottom" id="348-WR-pVT"/>
+                            <constraint firstItem="2YF-Zd-nKn" firstAttribute="baseline" secondItem="1pi-yf-zY0" secondAttribute="baseline" id="0Lb-k0-3Go"/>
+                            <constraint firstAttribute="trailing" secondItem="HVO-k9-6xR" secondAttribute="trailing" id="0x2-Jn-sKC"/>
+                            <constraint firstItem="HVO-k9-6xR" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leading" id="89N-BQ-M7D"/>
+                            <constraint firstItem="HVO-k9-6xR" firstAttribute="top" secondItem="1pi-yf-zY0" secondAttribute="bottom" constant="8" symbolic="YES" id="9AX-Nn-rXo"/>
                             <constraint firstAttribute="trailing" secondItem="HVO-k9-6xR" secondAttribute="trailing" id="AS5-TM-pPW"/>
-                            <constraint firstItem="2YF-Zd-nKn" firstAttribute="baseline" secondItem="1pi-yf-zY0" secondAttribute="baseline" id="Ab2-2h-427"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="2YF-Zd-nKn" secondAttribute="trailing" constant="-9" id="Aiv-T5-ALe"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2YF-Zd-nKn" secondAttribute="trailing" constant="-6" id="EKv-d8-1XR"/>
                             <constraint firstItem="1pi-yf-zY0" firstAttribute="top" secondItem="wWY-dZ-3dw" secondAttribute="bottom" constant="8" symbolic="YES" id="JM2-lk-AtW"/>
                             <constraint firstItem="1pi-yf-zY0" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leadingMargin" constant="-5" id="ObT-lF-Mqv"/>
+                            <constraint firstItem="1pi-yf-zY0" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leadingMargin" constant="-12" id="PbK-ns-Ncb"/>
                             <constraint firstItem="HVO-k9-6xR" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leading" id="PkI-dX-Xxr"/>
-                            <constraint firstItem="HVO-k9-6xR" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leading" id="d5B-yM-hgf"/>
-                            <constraint firstAttribute="trailing" secondItem="HVO-k9-6xR" secondAttribute="trailing" id="jt4-Lg-foc"/>
+                            <constraint firstItem="1pi-yf-zY0" firstAttribute="top" secondItem="wWY-dZ-3dw" secondAttribute="bottom" constant="8" symbolic="YES" id="SbC-Lf-1yY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2YF-Zd-nKn" secondAttribute="trailing" constant="-8" id="ft6-2x-3K9"/>
+                            <constraint firstItem="HVO-k9-6xR" firstAttribute="bottom" secondItem="8gj-Oz-JGU" secondAttribute="top" id="miS-Gu-eli"/>
                             <constraint firstAttribute="bottomMargin" secondItem="HVO-k9-6xR" secondAttribute="bottom" constant="48" id="nJh-dD-Uco"/>
-                            <constraint firstItem="1pi-yf-zY0" firstAttribute="leading" secondItem="2vr-VZ-q8U" secondAttribute="leadingMargin" constant="-10" id="xfz-gQ-pBN"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="2na-7a-pM9"/>
-                                <exclude reference="xfz-gQ-pBN"/>
-                                <exclude reference="1gl-p2-csc"/>
-                                <exclude reference="348-WR-pVT"/>
-                                <exclude reference="d5B-yM-hgf"/>
-                                <exclude reference="jt4-Lg-foc"/>
-                                <exclude reference="Ab2-2h-427"/>
-                                <exclude reference="Aiv-T5-ALe"/>
+                                <exclude reference="PbK-ns-Ncb"/>
+                                <exclude reference="SbC-Lf-1yY"/>
+                                <exclude reference="0x2-Jn-sKC"/>
+                                <exclude reference="89N-BQ-M7D"/>
+                                <exclude reference="9AX-Nn-rXo"/>
+                                <exclude reference="miS-Gu-eli"/>
+                                <exclude reference="0Lb-k0-3Go"/>
+                                <exclude reference="ft6-2x-3K9"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="constraints">
-                                <include reference="2na-7a-pM9"/>
                                 <exclude reference="JM2-lk-AtW"/>
                                 <exclude reference="ObT-lF-Mqv"/>
-                                <include reference="xfz-gQ-pBN"/>
-                                <include reference="1gl-p2-csc"/>
-                                <include reference="348-WR-pVT"/>
+                                <include reference="PbK-ns-Ncb"/>
+                                <include reference="SbC-Lf-1yY"/>
+                                <include reference="0x2-Jn-sKC"/>
+                                <include reference="89N-BQ-M7D"/>
+                                <include reference="9AX-Nn-rXo"/>
                                 <exclude reference="AS5-TM-pPW"/>
                                 <exclude reference="PkI-dX-Xxr"/>
-                                <include reference="d5B-yM-hgf"/>
-                                <include reference="jt4-Lg-foc"/>
+                                <include reference="miS-Gu-eli"/>
                                 <exclude reference="nJh-dD-Uco"/>
-                                <include reference="Ab2-2h-427"/>
-                                <include reference="Aiv-T5-ALe"/>
+                                <include reference="0Lb-k0-3Go"/>
                                 <exclude reference="EKv-d8-1XR"/>
+                                <include reference="ft6-2x-3K9"/>
                             </mask>
                         </variation>
                     </view>
@@ -571,12 +574,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nkq-h5-2Ts" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4578" y="774.75"/>
+            <point key="canvasLocation" x="4650" y="783"/>
         </scene>
         <!--Requests-->
         <scene sceneID="Ugt-0k-lrk">
             <objects>
-                <viewController id="Usk-TD-GNI" sceneMemberID="viewController">
+                <viewController id="Usk-TD-GNI" customClass="RequestsViewController" customModule="CommutHer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D0e-fT-3Lh"/>
                         <viewControllerLayoutGuide type="bottom" id="kKD-Bg-sOl"/>
@@ -594,6 +597,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="84" y="33" width="232" height="21"/>
+                                </variation>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EKF-EJ-0x9">
                                 <rect key="frame" x="0.0" y="111" width="600" height="440"/>
@@ -608,6 +614,13 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="67" width="400" height="684"/>
+                                </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="Usk-TD-GNI" id="Ws1-3T-qco"/>
+                                    <outlet property="delegate" destination="Usk-TD-GNI" id="yJY-TM-5z0"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -621,63 +634,13 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Requests" id="287-zL-lHs"/>
+                    <connections>
+                        <outlet property="tableview" destination="EKF-EJ-0x9" id="cWf-09-92K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X9F-9i-dw3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4579" y="107"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="nn6-lG-9Y2">
-            <objects>
-                <viewController id="7bU-9z-fxB" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lSU-Zh-Ub4"/>
-                        <viewControllerLayoutGuide type="bottom" id="GPk-8n-GV9"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="vFA-6X-5OO">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="What time would you like to leave?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rb7-xS-ZcL">
-                                <rect key="frame" x="169" y="166" width="263" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="263" id="FFV-e3-oEj"/>
-                                    <constraint firstAttribute="height" constant="21" id="OJb-rh-gSJ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <datePicker contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="1Nw-ax-Pcx">
-                                <rect key="frame" x="0.0" y="227" width="600" height="216"/>
-                                <date key="date" timeIntervalSinceReferenceDate="480816330.78061497">
-                                    <!--2016-03-28 00:05:30 +0000-->
-                                </date>
-                            </datePicker>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OGe-eJ-r8i">
-                                <rect key="frame" x="237" y="451" width="127" height="30"/>
-                                <state key="normal" title="Request Commute"/>
-                                <connections>
-                                    <segue destination="i4E-wz-h4l" kind="show" id="mPW-Y0-cGg"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="1Nw-ax-Pcx" firstAttribute="centerX" secondItem="rb7-xS-ZcL" secondAttribute="centerX" id="0Bw-dd-nNz"/>
-                            <constraint firstItem="1Nw-ax-Pcx" firstAttribute="leading" secondItem="vFA-6X-5OO" secondAttribute="leading" id="137-jP-JVh"/>
-                            <constraint firstItem="1Nw-ax-Pcx" firstAttribute="top" secondItem="rb7-xS-ZcL" secondAttribute="bottom" constant="40" id="Ih9-Xn-A7c"/>
-                            <constraint firstItem="1Nw-ax-Pcx" firstAttribute="centerX" secondItem="OGe-eJ-r8i" secondAttribute="centerX" id="Vau-eU-zBo"/>
-                            <constraint firstItem="OGe-eJ-r8i" firstAttribute="top" secondItem="1Nw-ax-Pcx" secondAttribute="bottom" constant="8" symbolic="YES" id="XPa-AT-4oE"/>
-                            <constraint firstAttribute="trailing" secondItem="1Nw-ax-Pcx" secondAttribute="trailing" id="a7f-7N-05L"/>
-                            <constraint firstItem="rb7-xS-ZcL" firstAttribute="top" secondItem="lSU-Zh-Ub4" secondAttribute="bottom" constant="102" id="mzc-kq-Ke1"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="sGQ-rF-sB0"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NLM-1I-siE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5280" y="425"/>
+            <point key="canvasLocation" x="4605" y="112.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SJh-d0-3In">
@@ -796,7 +759,4 @@
     <resources>
         <image name="logo" width="5100" height="3300"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="mPW-Y0-cGg"/>
-    </inferredMetricsTieBreakers>
 </document>
